# searchable-flickr-pictures

./: README.md  pyproject.toml
.flox/: env.json
.flox/env/: manifest.toml
docs/plans/: 2026-03-28-flickr-indexer-design.md  2026-03-28-flickr-indexer-implementation.md
src/flickr_index/: __init__.py  cli.py  config.py  indexer.py  main.py  store.py
tests/: test_cli.py  test_config.py  test_indexer.py  test_integration.py  test_main.py  test_store.py
